# slay_the_synera_cpp_homework

./: .gitignore  AGENTS.md  AI生图prompt.docx  CMakeLists.txt  PROGRESS.md  README.md  README.tex  architecture.md  goal.md  中文结构.md
src/: main.cpp
src/app/: appwindow.cpp  appwindow.h  eventrules.cpp  eventrules.h  gamemanager.cpp  gamemanager.h  gamestate.cpp  gamestate.h  recordmanager.cpp  recordmanager.h  savemanager.cpp  savemanager.h
src/combat/: battle.json  battlerepository.cpp  battlerepository.h  battlescene.cpp  battlescene.h  battlesystem.cpp  battlesystem.h  board_utility.cpp  board_utility.h  map_utility.cpp  map_utility.h
src/combat/buff/: buff.cpp  buff.h  bufffactory.cpp  bufffactory.h  bufflist.json  buffmanager.cpp  buffmanager.h
src/combat/context/: combatcontext.h
src/combat/effect/: attribute_effect.cpp  character_effect.cpp  control_effect.cpp  damage_effect.cpp  effect.cpp  effect.h  effectfactory.cpp  effectfactory.h  effectlist.json  heal_effect.cpp
src/combat/equipment/: advanced_equipment.json  basic_equipment.json  equipment.cpp  equipment.h  equipmentrepository.cpp  equipmentrepository.h
src/core/: board.cpp  board.h  default_board.json  game.cpp  game.h  hex.h
src/core/boards/: default_board.json
src/core/maps/: default_board.json
src/entity/: unit.cpp  unit.h
src/entity/character/: character.cpp  character.h  characterfactory.cpp  characterfactory.h  defaultskill.cpp  defaultskill.h  template.json
src/entity/component/: attackcomponent.cpp  attackcomponent.h  buffcomponent.cpp  buffcomponent.h  component.cpp  component.h  interactcomponent.cpp  interactcomponent.h  movecomponent.cpp  movecomponent.h  rendercomponent.cpp  rendercomponent.h  spritecomponent.cpp  spritecomponent.h  statscomponent.cpp  statscomponent.h  teamcomponent.cpp  teamcomponent.h
src/entity/equipskill/: equipskill.cpp  equipskill.h
src/entity/object/: object.cpp  object.h
src/entity/obstacle/: obstacle.cpp  obstacle.h
src/gui/: benchslotitem.h  gamewindow.cpp  gamewindow.h  griditem.cpp  hexlayout.cpp  hexlayout.h  unititem.cpp
src/gui/HUD/: characterhud.cpp  characterhud.h  objecthud.cpp  objecthud.h  obstaclehud.cpp  obstaclehud.h
src/gui/battle/: battlescene.cpp  battlescene.h
src/gui/board/: benchslotitem.cpp  griditem.h  hexlayout.cpp  hexlayout.h  objectitem.cpp  objectitem.h  propitem.cpp  propitem.h  unititem.cpp  unititem.h
src/gui/pages/: battlepage.cpp  battlepage.h  eventpage.cpp  eventpage.h  mappage.cpp  mappage.h  startpage.cpp  startpage.h
src/gui/widgets/: cardpanel.cpp  cardpanel.h  equipmentpanel.cpp  equipmentpanel.h  gamehud.cpp  gamehud.h
src/world/aura/: aura.h
src/world/bag/: bag.h
src/world/event/: eventrepository.cpp  eventrepository.h  events.json  eventtypes.h
src/world/hextech/: hextech.cpp  hextech.h  hextech.json  hextechrepository.cpp  hextechrepository.h
src/world/map/: mapgenerator.cpp  mapgenerator.h  mapgraph.cpp  mapgraph.h  maplayer.cpp  maplayer.h  mapnode.h
